# nx01

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING  README  README.md
cmake/: config.cmake  rpcgen.cmake
cmake/Modules/: Findavl.cmake  Findcmdutils.cmake  Findjeffpc.cmake
cmake/config/: xdr.cmake
docs/: architecture.md  fs-protocol.md
examples/: nomad.conf
misc/prototypes/: prototype.c  prototype.cmake  prototype.h
src/: CMakeLists.txt
src/admin/: CMakeLists.txt  admin.h  main.c  vdev.c
src/client/: .gitignore  CMakeLists.txt  cmd_dir.c  cmd_login.c  cmd_nop.c  cmd_obj.c  cmd_vdev.c  cmds.c  cmds.h  main.c  ohandle.c  ohandle.h
src/common/: .gitignore  CMakeLists.txt  assfail.c  attr.c  connsvc.c  error.c  fscall.c  init.c  mutex.c  node.c  oid.c  rand.c  rpc_fs.h  rpc_fs.x  uuid.c  vclock.c  xdrfd.c
src/common/include/nomad/: atomic.h  attr.h  config.h.in  connsvc.h  error.h  fscall.h  init.h  iter.h  malloc.h  mutex.h  rand.h  refcnt.h  rpc.h  rpc_fs.h  time.h  types.h  vclock.h
src/fakeumem/: .gitignore  CMakeLists.txt  fakeumem.c
src/fakeumem/include/: umem.h
src/format/: CMakeLists.txt  main.c
src/fs/: CMakeLists.txt  fs  fscall.c  fscall.h  nomadfs.c  nomadfs.py  nomadsocket.py
src/fs/nomad/: nomadsocket.py  xdrsock.py
src/objstore/: .gitignore  CMakeLists.txt  obj.c  objstore.c  pool.c  vdev.c  vg.c  vol.c
src/objstore/include/nomad/: objstore.h  objstore_backend.h  objstore_impl.h
src/objstore/mem/: .gitignore  CMakeLists.txt  main.c  mem.h  obj.c
src/objstore/posix/: .gitignore  CMakeLists.txt  main.c  obj.c  oidbmap.c  posix.h  vol.c
src/server/: .gitignore  CMakeLists.txt
src/sunavl/: .gitignore  CMakeLists.txt  avl.c
src/sunavl/include/sys/: avl.h  avl_impl.h
src/sunlist/: .gitignore  CMakeLists.txt  list.c
src/suntaskq/: .gitignore  CMakeLists.txt  taskq.c
src/suntaskq/include/nomad/: taskq.h
src/suntaskq/include/sys/: taskq.h
src/tool/: CMakeLists.txt
